--- a/to-do-list.html
+++ b/to-do-list.html
@@ -7,7 +7,7 @@
 <body>
     <div class="my-list">
         <h1>Today's To-Do List</h1>
-        <p class="date">Monday, March 27th</p>
+        <p class="date">Monday, April 3rd</p>
         <ol>
             <li>Write a blog post</li>
             <li>Go to the bank</li>
