Updating the To-Do list

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -9,12 +9,12 @@
         <h1>Today's To-Do List</h1>
         <p class="date">Monday, April 3rd</p>
         <ol>
-            <li>Write a blog post</li>
-            <li>Go to the bank</li>
-            <li>Study for exams</li>
-            <li>Renew web hosting account and domain name</li>
-            <li>Learn something new</li>
-            <li>Update project log</li>
+            <li>Write a CV</li>
+            <li>Go to the gym</li>
+            <li>Visit grandmother</li>
+            <li>Study</li>
+            <li>Walk</li>
+            <li>Call my uncle</li>
         </ol>
     </div>
 </body>
